integration_tests/juniper_tests/fail/input-object/derive_unique_name.rs
#[derive(juniper::GraphQLInputObject)]
struct Object {
    test: String,
    #[graphql(name = "test")]
    test2: String,
}

fn main() {}
