integration_tests/juniper_tests/fail/input-object/derive_unique_name.stderr
error: GraphQL input object does not allow fields with the same name
 --> $DIR/derive_unique_name.rs:4:5
  |
4 | /     #[graphql(name = "test")]
5 | |     test2: String,
  | |_________________^
  |
  = help: There is at least one other field with the same name `test`, possibly renamed via the #[graphql] attribute
  = note: https://spec.graphql.org/June2018/#sec-Input-Objects
